Added figure tag

--- a/my-first-site/index.html
+++ b/my-first-site/index.html
@@ -21,8 +21,16 @@
             <h2 class="main-sub-title">Lorem ipsum Minim sed qui aute in et do cupidatat laborum sunt commodo voluptate laborum sunt commodo voluptate.</h2>
             <p class="main-text">Lorem ipsum Aliquip do voluptate dolor quis exercitation ex laboris aliquip. Lorem ipsum Cillum laboris Duis ea commodo anim magna sed proident. Lorem ipsum Aliquip labore consequat velit voluptate laboris et eiusmod Duis labore amet. Lorem ipsum Adipisicing cupidatat tempor commodo eu adipisicing. Lorem ipsum Excepteur pariatur dolore mollit dolore minim cillum. Lorem ipsum Consectetur Excepteur culpa sint qui anim. Lorem ipsum Mollit laborum anim sit Excepteur nostrud esse aliqua. Lorem ipsum Do aute culpa veniam adipisicing tempor proident exercitation exercitation irure incididunt dolor. Lorem ipsum Voluptate ex ut incididunt deserunt incididunt et ea qui est occaecat.</p>
             <div class="image-grid">
-              <div><img src="xoxota.jpg" alt="Aqui tem Xoxóta"></div>
-              <div><img src="xoxota.jpg" alt="Aqui tem outras xoxóta"></div>
+              <div>
+                <figure>
+                  <img src="xoxota.jpg" alt="Aqui tem Xoxóta">
+                </figure>
+                </div>
+              <div>
+                <figure>
+                  <img src="xoxota.jpg" alt="Aqui tem outras xoxóta">
+                </figure>
+              </div>
             </div>
           </article>
         </section>
